# mandelbrot-ocl

./: .gitignore  CMakeLists.txt  README.md  const.h  kernel.cl  kernel.hlsl  main.cpp  vulkan_main.cpp
